Added config file entries for autocomplete, clear line, and clear word

--- a/ncTelegram.conf
+++ b/ncTelegram.conf
@@ -60,5 +60,8 @@ open_file = ctrl o
 next_chan = ctrl n
 prev_chan = ctrl p
 hide_chanlist = ctrl b
+autocomplete = tab
+clear_line = ctrl u
+clear_word = ctrl w
 
 
