Added keymap configs for focus_chanlist, focus_message_list, history_prev, history_next

--- a/ncTelegram.conf
+++ b/ncTelegram.conf
@@ -59,9 +59,11 @@ quit = q
 open_file = ctrl o
 next_chan = ctrl n
 prev_chan = ctrl p
+history_prev = shift up
+history_next = shift down
 hide_chanlist = ctrl b
+focus_chanlist = left
+focus_message_list = up
 autocomplete = tab
 clear_line = ctrl u
 clear_word = ctrl w
-
-
